--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "expo": "~48.0.5",
+    "expo-camera": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-image-process": "^0.2.4",
+    "react-native": "0.71.3",
+    "tesseract.js": "^4.0.2",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
