--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react-image-process": "^0.2.4",
     "react-native": "0.71.3",
     "tesseract.js": "^4.0.2",
-    "expo-image-picker": "~14.1.1"
+    "expo-image-picker": "~14.1.1",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@expo/vector-icons": "^13.0.0",
+    "expo-font": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
